Revision history for Pod-Weaver

{{$NEXT}}

3.101636  2012-05-04 21:28:10 America/New_York
          break the content-generating code in the Version section into its own
          method (thanks, Chris Weyl)

3.101635  2012-02-07 22:03:26 America/New_York
          restore the full-document scan for ABSTRACT if not found in a comment
          token (thanks, David Golden)

3.101634  2011-10-31 22:56:36 America/New_York
          throw a (helpful?) exception when %m is used in a version format, but
          no package was found in the file

          the Legal plugin can now be given the filename in which the dist's
          full license can be found (thanks, APOCAL!)

3.101633  2011-09-19 15:48:16 America/New_York
          speed up performance by changing how we use PPI (thanks, Dave Rolsky)

3.101632  2010-10-19 07:49:32 America/New_York
          add missing DateTime prereq

3.101631  2010-10-14 23:00:19 America/New_York
          Name section now looks for a PODNAME comment if no package is found
          (hanekomu)

          Added a Bugs section (thanks, David Golden)

          Version, Region, and Generic are all more configurable (thanks,
          Apocalypse)

3.101630  2010-06-12 14:42:26 America/New_York
          Author section now emits a normal para or bulleted list (Florian
          Ragwitz)

3.101460  2010-05-26 22:36:13 America/New_York
          compat with Config::MVP::Reader v2

3.101450  2010-05-25 18:38:44 America/New_York
          compat with Config::MVP::Reader v1

3.101270  2010-05-07 21:36:45 America/New_York
          allow an explicit header arg to Generic

3.100710  2010-03-12 10:03:42 America/New_York
          further logging improvements; now uses Log::Dispatchouli explicitly

3.100680  2010-03-09 23:38:30 America/New_York
          improve logging delegation to interoperate with recent DZ changes

3.100650  2010-03-06 23:21:19 America/New_York
          expect a Log::Dispatchouli-like logger