@@ -1,6 +1,8 @@
 Revision history for Pod-Weaver
 
 {{$NEXT}}
+          add header_command attribute to the Collect section
+          (thanks, Christopher J. Madsen)
 
 3.101636  2012-05-04 21:28:10 America/New_York
           break the content-generating code in the Version section into its own
